--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "vue": "^3.2.31"
     },
     "dependencies": {
-        "daisyui": "^2.20.0"
+        "@cloudgeek/vue3-video-player": "^0.3.10",
+        "daisyui": "^2.22.0"
     }
 }
