--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     },
     "dependencies": {
         "@cloudgeek/vue3-video-player": "^0.3.10",
-        "daisyui": "^2.22.0"
+        "vue-plyr": "^7.0.0"
     }
 }
